--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,5 @@
 {
-    "singleQuote": false,
+    "singleQuote": true,
     "bracketSpacing": false,
     "tabWidth": 2,
     "trailingComma": "es5",
